# libmkms

./: .gitignore  README.textile
lib/: CMakeLists.txt  Doxyfile
lib/include/: MacKeyboardMouseSimulator.h  MacVirtualKeys.h
lib/src/: MacKeyboardMouseSimulator.cpp
sample-app/: CMakeLists.txt
sample-app/src/: main.cpp
